wp-content/universal-assets/v2/scss/universal-secondnav.scss
.nav-level-2 {
    height: 45px;
    background-color: #333;
    position: relative;
    z-index: 99;
    left: 0%;
    width: 100%;
    display: none;
    @media screen and (max-width: 800px) {
        display: none !important;
    }
    #menu-secondary_universal_menu  {
        height: 100%;
        width: 100%;
        display: flex;
        flex-wrap: nowrap;
        align-items: center;
        li {
            a {
                color: #fff;
                font-weight: 300;
                line-height: 1.2em;
                padding: 0;
                text-decoration: none;
                display: flex;
                justify-content: center;
                align-items: center;
                opacity: 1;
				word-break: normal;
				font-size: 16px;
                &:hover, &:focus, &:active {
                    background: transparent;
                    opacity: .7;
                }
                span {
                    padding: 0 23px;
                    transition: font-weight .1s ease-in-out;
                    overflow: hidden;
                    line-height: 18px;
                    &:not(.caret) {
                        height: 45px;
                        display: flex;
                        align-items: center;
                    }
                    @media screen and (min-width: 768px) and (max-width: 981px) {
                        padding: 0 16px;
                    }
                }
            }
            &.active {
                a { opacity: .7; }
            }
            &.menu-item-has-children {
                &.open > a, &.show > a {
                    background: transparent !important;
                }
                .dropdown-menu a {
                    height: 30px;
                }
            }
        }
    }
}

// If you're crazy enough to give your subnav a dropdown
#menu-secondary_universal_menu{
    .dropdown {
        &:focus { background: #333; }
        a.dropdown-toggle {
            span.caret {
                padding: 0px;
                width: 5px;
                height: 5px;
                margin-right: 20px;
                margin-left: -15px;
                @media screen and (min-width: 768px) and (max-width: 981px) {
                    margin-right: 15px;
                    margin-left: -10px;
                }
            }
        }
        .dropdown-menu {
            font-size: 16px;
            background: #333;
            min-width: 125px;
            position: absolute !important;
            transform: none !important;
            top: 45px;
            li {
                border: 0px;
                &:hover {
                    background: #666;
                }
            }
        }
        @media screen and (max-width: 800px) {
            a.dropdown-toggle {
                span.caret {
                    margin-left: 0px;
                }
            }
            .dropdown-menu li a { color: #fff !important; }
        }
        .dropdown-menu > .active > a, .dropdown-menu > .active > a:focus, .dropdown-menu > .active > a:hover { background-color: #666; }
        // show dropdown menu on hover
        &:hover .dropdown-menu {
            display: block;
        }
    }
    .dropdown:not(.v-select) {
        font-size: 16px;
        position: relative;
        width: auto;
        background: transparent;
        box-shadow: none;
        &.open, &.show {
            height: 45px;
            overflow: visible;
        }
    }
}

